--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 	<link href="css/normalize.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
-	<link href="css/outline.css" rel="stylesheet">
+	<link href="css/outline1.css" rel="stylesheet">
   </head>
   <body>
 	<header class="main-header">
@@ -175,9 +175,11 @@
 			</ul>
 		</section>
 	</main>
+	<div class="map">
 	<figure class="map-image">
 		<img class="map-image-item" src="img/map.jpg" alt="Карта">
 	</figure>
+	</div>
 	<div class="visually-hidden container-contacts">
 			<h3 class="title-contacts">Nёrds Design Studio</h3>
 			<p class="footer-contacts">
