--- a/catalog.html
+++ b/catalog.html
@@ -209,7 +209,8 @@
 		</div>	
 	</main>
 	<figure class="map-image">
-		<img class="map-image-item" src="img/map.jpg" alt="Карта">
+		<img class="map-image-item" src="img/map.jpg" width="1725" height="808" 
+		alt="Карта">
 	</figure>
 	<div class="visually-hidden container-contacts">
 			<h3 class="title-contacts">Nёrds Design Studio</h3>
