--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 	</main>
 	<div class="map">
 	<figure class="map-image">
-		<img class="map-image-item" src="img/map.jpg" alt="Карта">
+		<img class="map-image-item" src="img/map.jpg" width="1725" height="808" alt="Карта">
 	</figure>
 	</div>
 	<div class="visually-hidden container-contacts">
