--- a/catalog.html
+++ b/catalog.html
@@ -6,27 +6,29 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 	<link href="css/normalize.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
-	<link href="css/outline1.css" rel="stylesheet">
+	<link href="css/outline.css" rel="stylesheet">
   </head>
   <body>
 	<header class="main-catalog-header">
+		
 		<nav class="main-navigation container">
 			<a class="main-header-logo" href="index.html">				
 					<img src="img/logo.png" width="160" height="65" 
 					alt="Логотип Нердс магазин">	
 			</a>
 			<ul class="site-navigation">
-				<li><a href="index.html">Студия</a></li>
-				<li><a href="#">Клиенты</a></li>
-				<li class="site-navigation-shop"><a href="#">Магазин</a></li>
-				<li><a href="#">Контакты</a></li>
-			</ul>
-			<div class="line-shop"></div>
+				<li class="site-item"><a href="index.html">Студия</a></li>
+				<li class="site-item"><a href="#">Клиенты</a></li>
+				<li class="site-item shop-item"><a href="#">Магазин</a></li>
+				<li class="site-item"><a href="#">Контакты</a></li>
+			</ul>			
 			<ul class="cart-navigation">
-				<li class="cart-link"><a href="#">Корзина</a></li>
+				<li class="site-item cart-link"><a href="#">Корзина</a></li>
 			</ul>
+			
 		</nav>
 		<h1 class="main-header-title">Магазин готовых шаблонов</h1>
+		<div class="line-hop"></div>
 	</header>
 	<main class="container">
 		<h2 class="visually-hidden">Фильтр Сайтов</h2>
@@ -38,7 +40,7 @@
 						<div class="range-filter">
 							<div class="range-controls">
 								<div class="scale">
-									<div class="bar" style="margin-left: 20%; width: 30%"></div>
+									<div class="bar" style="margin-left: 0%; width: 65%"></div>
 								</div>
 								<div class="toggle toggle-min"></div>
 								<div class="toggle toggle-max"></div>
@@ -144,7 +146,7 @@
 									</figure>
 								<section class="catalog-item-block">
 									<h3 class="catalog-item-title">Pink app</h3>
-									<p class="catalog-item-info">Продуктовый лендинг приложения для IOS и Android</p>
+									<p class="catalog-item-info">Продуктовый лендинг <br> приложения для IOS и Android</p>
 									<span class="button catalog-btn">9900 руб.</span>
 								</section>	
 							</a>
@@ -186,7 +188,7 @@
 									</figure>
 								<section class="catalog-item-block">
 									<h3 class="catalog-item-title">A plus</h3>
-									<p class="catalog-item-info">Лендинг курсов повышения квалификации</p>
+									<p class="catalog-item-info">Лендинг курсов повышения <br> квалификации</p>
 									<span class="button catalog-btn">9900 руб.</span>
 								</section>	
 							</a>
@@ -201,7 +203,7 @@
 								
 								<section class="catalog-item-block">								
 									<h3 class="catalog-item-title">Кваст</h3>
-									<p class="catalog-item-info">Промо-сайт производителя крафтового кваса</p>
+									<p class="catalog-item-info">Промо-сайт производителя <br> крафтового кваса</p>
 									<span class="button catalog-btn">9900 руб.</span>									
 								</section>	
 								
@@ -209,7 +211,7 @@
 						</li>
 					</ul>					
 					<ul class="pagination-list">
-						<li class="pagination-item pagination-item-current"><a href="#">1</a></li>
+						<li class="pagination-item-current"><a href="#">1</a></li>
 						<li class="pagination-item "><a>2</a></li>
 						<li class="pagination-item"><a href="#">3</a></li>
 						<li class="pagination-item"><a href="#">Следующая</a></li>
@@ -246,7 +248,7 @@
 					<span class="visually-hidden">Вконтакте</span>
 					<svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15"><path fill="#fff" d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z"/></svg>
 					</a>
-				</li class="social-list">
+				</li>
 				<li class="social-list"><a class="social-button" href="#">
 					<span class="visually-hidden">Фейсбук</span>
 					<svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22"><path fill="#fff" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/></svg>
@@ -265,22 +267,26 @@
 			</section>	
 		</div>
 	</footer>
-		<div class="visually-hidden feedback-container">
+		<section class="visually-hidden modal modal-login">
 			<form class="modal-login" action="http://echo.htmlacademy.ru" method="post">
-				<b class="modal-feedback-title">Напишите нам</b>			
-				<div class="feedback-left-column">
+				<b class="modal-feedback-title">Напишите нам</b>	
+			<div class="form-info">
+				<div class="feedback-column">
 					<label class="feedback-data" for="feedback-login">Ваше имя:</label>
 					<input class="login-user" type="text" name="login" id="feedback-login" placeholder="Представьтесь, пожалуйста" required>
 				</div>
-				<div class="feedback-right-column">
+				<div class="feedback-column">
 					<label class="feedback-data" for="feedback-email">Ваш e-mail:</label>
 					<input type="email" name="email" id="feedback-email" placeholder="Для отправки ответа" required>
 				</div>
+				<div class="feedback-column">
 				<label class="feedback-data" for="feedback-textarea">Текст письма:</label>
-				<textarea name="text" id="feedback-textarea" placeholder="В свободной форме" required rows="5"></textarea>            
+				<textarea name="text" id="feedback-textarea" placeholder="В свободной форме" required rows="5"></textarea> 
+				</div>
+			</div>
 				<button type="submit" class="button feedback-btn">Отправить</button>
-				<button type="submit" class="btn feedback-btn">Закрыть</button>
+				<button type="submit" class="btn modal-close">Закрыть</button>
 			</form>
-		</div>
+		</section>	
   </body>
 </html>
