--- a/index.html
+++ b/index.html
@@ -12,21 +12,20 @@
 	<header class="main-header">
 		<h1 class="visually-hidden">Магазин сайтов Нёрдс</h1>
 		<nav class="main-navigation container">
-			<a class="main-header-logo" href="index.html">
+			<a class="site-item main-header-logo" href="index.html">
 				<img src="img/logo.png" width="160" height="65" 
 				alt="Логотип Нердс магазин">
 			</a>			
 			<ul class="site-navigation">
-				<li><a href="#">Студия</a></li>
-				<li><a href="#">Клиенты</a></li>
-				<li><a href="catalog.html">Магазин</a></li>
-				<li><a href="#">Контакты</a></li>
+				<li class="site-item site-item-active"><a href="#">Студия</a></li>
+				<li class="site-item site-item-active"><a href="#">Клиенты</a></li>
+				<li class="site-item site-item-active"><a href="catalog.html">Магазин</a></li>
+				<li class="site-item site-item-active"><a href="#">Контакты</a></li>
 			</ul>
 			<ul class="cart-navigation">
-				<li class="cart-link"><a href="#">Корзина</a></li>
+				<li class="site-item cart-link"><a href="#">Корзина</a></li>
 			</ul>
 		</nav>
-		<header class="main-header"></header>
     <section class="slider">
       <div class="container">
         <h2 class="visually-hidden">Преимущества</h2>
@@ -57,7 +56,6 @@
         </ul>  
       </div>
     </section>             
-        </div>
 	</header>
 	<main class="container">
 		<section class="option-offer">
@@ -167,6 +165,7 @@
 			<div class="line line-item-3"></div>
 		</section>
 	</main>
+	
 	<div class="map">
 		<figure class="map-image">
 			<img class="map-image-item" src="img/map.jpg" width="1725" height="808" alt="Карта">
@@ -174,6 +173,7 @@
 		<div class="marker-image">
 			<img class="map-marker" src="img/map-marker.png" width="367" height="190" alt="Маркер">
 		</div>
+		<div class="container">
 		<div class="container-contacts">
 			<div class="container-info-contacts">
 				<h3 class="title-contacts">Nёrds Design Studio</h3>
@@ -187,7 +187,9 @@
 				<a class="button btn-contacts" href="#">Напишите нам</a>
 			</div>
 		</div>
+		
 	</div>	
+	</div>
 	<footer class="main-footer">
 		<div class="container">
 			<ul class="footer-social">
@@ -195,7 +197,7 @@
 					<span class="visually-hidden">Вконтакте</span>
 					<svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15"><path fill="#fff" d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z"/></svg>
 					</a>
-				</li class="social-list">
+				</li>
 				<li class="social-list"><a class="social-button" href="#">
 					<span class="visually-hidden">Фейсбук</span>
 					<svg xmlns="http://www.w3.org/2000/svg" width="12" height="22" viewBox="0 0 12 22"><path fill="#fff" d="M12 4V0H8a4 4 0 0 0-4 4v4H0v4h4v10h4V12h4V8H8V4h4z"/></svg>
@@ -214,23 +216,27 @@
 			</section>	
 		</div>
 	</footer>
-		<div class="visually-hidden feedback-container">
+		<section class="modal modal-login">
 			<form class="modal-login" action="http://echo.htmlacademy.ru" method="post">
-				<b class="modal-feedback-title">Напишите нам</b>			
-				<div class="feedback-left-column">
+				<b class="modal-feedback-title">Напишите нам</b>	
+			<div class="form-info">
+				<div class="feedback-column">
 					<label class="feedback-data" for="feedback-login">Ваше имя:</label>
 					<input class="login-user" type="text" name="login" id="feedback-login" placeholder="Представьтесь, пожалуйста" required>
 				</div>
-				<div class="feedback-right-column">
+				<div class="feedback-column">
 					<label class="feedback-data" for="feedback-email">Ваш e-mail:</label>
 					<input type="email" name="email" id="feedback-email" placeholder="Для отправки ответа" required>
 				</div>
+				<div class="feedback-column">
 				<label class="feedback-data" for="feedback-textarea">Текст письма:</label>
-				<textarea name="text" id="feedback-textarea" placeholder="В свободной форме" required rows="5"></textarea>            
+				<textarea name="text" id="feedback-textarea" placeholder="В свободной форме" required rows="5"></textarea> 
+				</div>
+			</div>
 				<button type="submit" class="button feedback-btn">Отправить</button>
-				<button type="submit" class="btn feedback-btn">Закрыть</button>
+				<button type="submit" class="btn modal-close">Закрыть</button>
 			</form>
-		</div>
+		</section>	
   </body>
 </html>
  
