--- a/index.html
+++ b/index.html
@@ -164,18 +164,14 @@
 			<div class="line line-item-2"></div>
 			<div class="line line-item-3"></div>
 		</section>
-	</main>
-	
+	</main>	
 	<div class="map">
 		<figure class="map-image">
-			<img class="map-image-item" src="img/map.jpg" width="1725" height="808" alt="Карта">
+			<img class="map-image-item" src="img/map.jpg"  alt="Карта">
 		</figure>
-		<div class="marker-image">
-			<img class="map-marker" src="img/map-marker.png" width="367" height="190" alt="Маркер">
-		</div>
 		<div class="container">
 		<div class="container-contacts">
-			<div class="container-info-contacts">
+				<div class="container-info-contacts">
 				<h3 class="title-contacts">Nёrds Design Studio</h3>
 				<p class="footer-contacts">
 					191186, Санкт-Петербург.<br>
@@ -185,13 +181,16 @@
 					<br>
 				</p>
 				<a class="button btn-contacts" href="#">Напишите нам</a>
+				</div>
 			</div>
-		</div>
-		
-	</div>	
+			<div class="marker-image">
+				<img class="map-marker" src="img/map-marker.png" alt="Маркер">
+			</div>	
+		</div>	
 	</div>
 	<footer class="main-footer">
-		<div class="container">
+		<div class="container">		
+			
 			<ul class="footer-social">
 				<li class="social-list"><a class="social-button" href="#">
 					<span class="visually-hidden">Вконтакте</span>
@@ -237,6 +236,7 @@
 				<button type="submit" class="btn modal-close">Закрыть</button>
 			</form>
 		</section>	
+		
   </body>
 </html>
  
