--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 	<link href="css/normalize.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
-	<link href="css/outline.css" rel="stylesheet">
+	<link href="css/outline1.css" rel="stylesheet">
   </head>
   <body>
 	<header class="main-catalog-header">
@@ -222,13 +222,11 @@
 	</main>
 	<div class="map">
 		<figure class="map-image">
-			<img class="map-image-item" src="img/map.jpg" width="1725" height="808" alt="Карта">
+			<img class="map-image-item" src="img/map.jpg"  alt="Карта">
 		</figure>
-		<div class="marker-image">
-			<img class="map-marker" src="img/map-marker.png" width="367" height="190" alt="Маркер">
-		</div>
+		<div class="container">
 		<div class="container-contacts">
-			<div class="container-info-contacts">
+				<div class="container-info-contacts">
 				<h3 class="title-contacts">Nёrds Design Studio</h3>
 				<p class="footer-contacts">
 					191186, Санкт-Петербург.<br>
@@ -238,11 +236,15 @@
 					<br>
 				</p>
 				<a class="button btn-contacts" href="#">Напишите нам</a>
+				</div>
 			</div>
-		</div>
-	</div>	
+			<div class="marker-image">
+				<img class="map-marker" src="img/map-marker.png"  alt="Маркер">
+			</div>	
+		</div>	
+	</div>
 	<footer class="main-footer">
-		<div class="container">
+		<div class="container">				
 			<ul class="footer-social">
 				<li class="social-list"><a class="social-button" href="#">
 					<span class="visually-hidden">Вконтакте</span>
@@ -267,7 +269,7 @@
 			</section>	
 		</div>
 	</footer>
-		<section class="visually-hidden modal modal-login">
+		<section class="modal modal-login">
 			<form class="modal-login" action="http://echo.htmlacademy.ru" method="post">
 				<b class="modal-feedback-title">Напишите нам</b>	
 			<div class="form-info">
@@ -287,6 +289,6 @@
 				<button type="submit" class="button feedback-btn">Отправить</button>
 				<button type="submit" class="btn modal-close">Закрыть</button>
 			</form>
-		</section>	
+		</section>		
   </body>
 </html>
