--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 	<link href="css/normalize.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
-	<link href="css/outline1.css" rel="stylesheet">
+	<link href="css/outline.css" rel="stylesheet">
   </head>
   <body>
 	<header class="main-header">
 		<h1 class="visually-hidden">Магазин сайтов Нёрдс</h1>
-		<nav class="main-navigation container">
-			<a class="site-item main-header-logo" href="index.html">
+		<div class="container">
+		<nav class="main-navigation">		
+			<a class="main-header-logo" href="index.html">
 				<img src="img/logo.png" width="160" height="65" 
 				alt="Логотип Нердс магазин">
 			</a>			
@@ -23,9 +24,10 @@
 				<li class="site-item site-item-active"><a href="#">Контакты</a></li>
 			</ul>
 			<ul class="cart-navigation">
-				<li class="site-item cart-link"><a href="#">Корзина</a></li>
-			</ul>
+				<li class="cart-link"><a href="#">Корзина</a></li>
+			</ul>			
 		</nav>
+		</div>
     <section class="slider">
       <div class="container">
         <h2 class="visually-hidden">Преимущества</h2>
@@ -68,7 +70,7 @@
 					<h3 class="offer-item-title">Веб-сайты</h3>
 					<p class="offer-item-info">
 						Мир никогда не будет прежним
-						после того как увидит ваш сайт!						
+						<br>после того как увидит ваш сайт!						
 					</p>					
 					<a class="button offer-btn-web " href="#">Заказать</a>
 				</li>
@@ -93,7 +95,7 @@
 					<h3 class="offer-item-title">Презентации</h3>
 					<p class="offer-item-info">
 						Вы даже не подозреваете,
-						насколько вы изумительны!					
+						<br>насколько вы изумительны!					
 					</p>				
 						<a class="button offer-site" href="#">Заказать</a>					
 				</li>
@@ -142,19 +144,19 @@
 					</a>
 				</li>
 				<li class="brand-item line-item">
-					<a class="brand-item-image" href="#">
+					<a class="brand-item-image image-item-1" href="#">
 						<img src="img/brand-Barbershop.png" width="260" height="180" 
 						alt="Barbershop Borodinsky">
 					</a>
 				</li>
 				<li class="brand-item ">
-					<a  class="brand-item-image" href="#">
+					<a  class="brand-item-image image-item-2" href="#">
 						<img src="img/brand-Pink-shop.png" width="260" height="180" 
 						alt="Pink">
 					</a>
 				</li>
 				<li class="brand-item line-item">
-					<a class="brand-item-image" href="#">
+					<a class="brand-item-image image-item-3" href="#">
 						<img src="img/brand-Mishka-shop.png" width="260" height="180" 
 						alt="Mishka">
 					</a>
@@ -167,30 +169,26 @@
 	</main>	
 	<div class="map">
 		<figure class="map-image">
-			<img class="map-image-item" src="img/map.jpg"  alt="Карта">
+			<img class="map-image-item" src="img/map-marker.jpg"  alt="Карта">
 		</figure>
 		<div class="container">
-		<div class="container-contacts">
+			<div class="container-contacts">
 				<div class="container-info-contacts">
-				<h3 class="title-contacts">Nёrds Design Studio</h3>
-				<p class="footer-contacts">
-					191186, Санкт-Петербург.<br>
-					ул.Б.Конюшенная,д. 19/8<br>
-					<br>
-					тел.+7(812)275-75-75<br>
-					<br>
-				</p>
-				<a class="button btn-contacts" href="#">Напишите нам</a>
+					<h3 class="title-contacts">Nёrds Design Studio</h3>
+					<p class="footer-contacts">
+						191186, Санкт-Петербург.<br>
+						ул.Б.Конюшенная,д. 19/8<br>
+						<br>
+						тел.+7(812)275-75-75<br>
+						<br>
+					</p>
+					<a class="button btn-contacts" href="#">Напишите нам</a>
 				</div>
 			</div>
-			<div class="marker-image">
-				<img class="map-marker" src="img/map-marker.png" alt="Маркер">
-			</div>	
 		</div>	
 	</div>
 	<footer class="main-footer">
-		<div class="container">		
-			
+		<div class="container">				
 			<ul class="footer-social">
 				<li class="social-list"><a class="social-button" href="#">
 					<span class="visually-hidden">Вконтакте</span>
@@ -215,7 +213,9 @@
 			</section>	
 		</div>
 	</footer>
-		<section class="modal modal-login">
+	 <div class="visually-hidden fixed-modal">
+		<div class="visually-hidden modal container">
+		<section class="visually-hidden modal modal-login">
 			<form class="modal-login" action="http://echo.htmlacademy.ru" method="post">
 				<b class="modal-feedback-title">Напишите нам</b>	
 			<div class="form-info">
@@ -234,9 +234,10 @@
 			</div>
 				<button type="submit" class="button feedback-btn">Отправить</button>
 				<button type="submit" class="btn modal-close">Закрыть</button>
-			</form>
+			</form>	
 		</section>	
-		
+		</div>
+		</div>	
   </body>
 </html>
  
