--- a/catalog.html
+++ b/catalog.html
@@ -269,7 +269,7 @@
 			</section>	
 		</div>
 	</footer>
-		<section class="visually-hidden modal modal-login">
+		<section class="modal modal-login">
 			<form class="modal-login" action="http://echo.htmlacademy.ru" method="post">
 				<b class="modal-feedback-title">Напишите нам</b>	
 			<div class="form-info">
