--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 	<link href="css/normalize.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
-	<link href="css/outline.css" rel="stylesheet">
+	<link href="css/outline1.css" rel="stylesheet">
   </head>
   <body>
 	<header class="main-header">
@@ -213,9 +213,7 @@
 			</section>	
 		</div>
 	</footer>
-	 <div class="visually-hidden fixed-modal">
-		<div class="visually-hidden modal container">
-		<section class="visually-hidden modal modal-login">
+		<section class="modal modal-login">
 			<form class="modal-login" action="http://echo.htmlacademy.ru" method="post">
 				<b class="modal-feedback-title">Напишите нам</b>	
 			<div class="form-info">
@@ -236,8 +234,6 @@
 				<button type="submit" class="btn modal-close">Закрыть</button>
 			</form>	
 		</section>	
-		</div>
-		</div>	
   </body>
 </html>
  
