--- a/index.html
+++ b/index.html
@@ -6,58 +6,57 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
 	<link href="css/normalize.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
-	<link href="css/outline1.css" rel="stylesheet">
   </head>
   <body>
 	<header class="main-header">
 		<h1 class="visually-hidden">Магазин сайтов Нёрдс</h1>
 		<div class="container">
-		<nav class="main-navigation">		
-			<a class="main-header-logo" href="index.html">
-				<img src="img/logo.png" width="160" height="65" 
-				alt="Логотип Нердс магазин">
-			</a>			
-			<ul class="site-navigation">
-				<li class="site-item site-item-active"><a href="#">Студия</a></li>
-				<li class="site-item site-item-active"><a href="#">Клиенты</a></li>
-				<li class="site-item site-item-active"><a href="catalog.html">Магазин</a></li>
-				<li class="site-item site-item-active"><a href="#">Контакты</a></li>
-			</ul>
-			<ul class="cart-navigation">
-				<li class="cart-link"><a href="#">Корзина</a></li>
-			</ul>			
-		</nav>
+			<nav class="main-navigation">		
+				<a class="main-header-logo" href="index.html">
+					<img src="img/logo.png" width="160" height="65" 
+					alt="Логотип Нердс магазин">
+				</a>			
+				<ul class="site-navigation">
+					<li class="site-item site-item-active"><a href="#">Студия</a></li>
+					<li class="site-item site-item-active"><a href="#">Клиенты</a></li>
+					<li class="site-item site-item-active"><a href="catalog.html">Магазин</a></li>
+					<li class="site-item site-item-active"><a href="#">Контакты</a></li>
+				</ul>
+				<ul class="cart-navigation">
+					<li class="cart-link"><a href="#">Корзина</a></li>
+				</ul>			
+			</nav>
 		</div>
-    <section class="slider">
-      <div class="container">
-        <h2 class="visually-hidden">Преимущества</h2>
-        <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
-        <input class="visually-hidden" type="radio" id="product-2" name="toggle">
-        <input class="visually-hidden" type="radio" id="product-3" name="toggle">
-        <div class="slider-controls">
-          <label class="slider-controls-item slider-controls-item--1" for="product-1">Первый</label>
-          <label class="slider-controls-item slider-controls-item--2" for="product-2">Второй</label>
-          <label class="slider-controls-item slider-controls-item--3" for="product-3">Третий</label>
-        </div>
-        <ul class="slider-list">
-          <li class="slider-item">
-            <h3>Долго, дорого,<br> скрупулезно.</h3>
-            <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
-            <a class="slider-item-button button" href="#">Узнать больше</a>
-          </li>
-          <li class="slider-item">
-            <h3>Любим математику как никто другой</h3>
-            <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-            <a class="slider-item-button button" href="#">Узнать больше</a>
-          </li>
-          <li class="slider-item">
-            <h3>Только ночь,<br> только хардкор</h3>
-            <p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
-            <a class="slider-item-button button" href="#">Узнать больше</a>
-          </li>
-        </ul>  
-      </div>
-    </section>             
+		<section class="slider">
+			<div class="container">
+				<h2 class="visually-hidden">Преимущества</h2>
+				<input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
+				<input class="visually-hidden" type="radio" id="product-2" name="toggle">
+				<input class="visually-hidden" type="radio" id="product-3" name="toggle">
+				<div class="slider-controls">
+					<label class="slider-controls-item slider-controls-item--1" for="product-1">Первый</label>
+					<label class="slider-controls-item slider-controls-item--2" for="product-2">Второй</label>
+					<label class="slider-controls-item slider-controls-item--3" for="product-3">Третий</label>
+				</div>
+				<ul class="slider-list">
+					<li class="slider-item">
+						<h3>Долго, дорого,<br> скрупулезно.</h3>
+						<p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+						<a class="slider-item-button button" href="#">Узнать больше</a>
+					</li>
+					<li class="slider-item">
+						<h3>Любим математику как никто другой</h3>
+						<p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+						<a class="slider-item-button button" href="#">Узнать больше</a>
+					</li>
+					<li class="slider-item">
+						<h3>Только ночь,<br> только хардкор</h3>
+						<p>Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
+						<a class="slider-item-button button" href="#">Узнать больше</a>
+					</li>
+				</ul>  
+			</div>
+		</section>             
 	</header>
 	<main class="container">
 		<section class="option-offer">
@@ -97,44 +96,44 @@
 						Вы даже не подозреваете,
 						<br>насколько вы изумительны!					
 					</p>				
-						<a class="button offer-site" href="#">Заказать</a>					
+					<a class="button offer-site" href="#">Заказать</a>					
 				</li>
 			</ul>	
 			<hr>
 		</section>
-			<div class="columns-container">
-				<article class="detail-left-column">
-					<h3 class="visually-hidden">Дизайн-студия</h3>
-					<b class="detail-title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
-						<p class="detail-info">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-						<b class="detail-list-title">Выполняем заказы на разработку:</b>
-						<ul class="detail-list">
-							<li class="text-order">Веб-сайтов любой сложности</li>
-							<li class="text-order">Мобильных приложений для iOS и Android</li>
-							<li class="text-order">Слайдшоу и видео для корпоративных презентаций</li>
-						</ul>
-				</article>
-				<section class="detail-right-column">
-					<h3 class="visually-hidden">Доверие!</h3>
-						<figure class="detail-header-image">
-							<img src="img/main-logo.png" width="360" height="208" 
-							alt="Nerds">
-						</figure>
-						<b class="table-info">с 2004 года любим точность во всем:</b>
-						<table>
-							<tr>
-								<th>146<sup>%</sup></th>
-								<th>100<sup>%</sup></th>
-								<th>50<sup>%</sup></th>
-							</tr>
-							<tr>
-								<td>Уровень самоотдачи</td>
-								<td>Соблюдение сроков</td>
-								<td>Минимальная предоплата</td>
-							</tr>
-						</table>					
-				</section>
-			</div>		
+		<div class="columns-container">
+			<article class="detail-left-column">
+				<h3 class="visually-hidden">Дизайн-студия</h3>
+				<b class="detail-title">Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
+				<p class="detail-info">Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+				<b class="detail-list-title">Выполняем заказы на разработку:</b>
+				<ul class="detail-list">
+					<li class="text-order">Веб-сайтов любой сложности</li>
+					<li class="text-order">Мобильных приложений для iOS и Android</li>
+					<li class="text-order">Слайдшоу и видео для корпоративных презентаций</li>
+				</ul>
+			</article>
+			<section class="detail-right-column">
+				<h3 class="visually-hidden">Доверие!</h3>
+					<figure class="detail-header-image">
+						<img src="img/main-logo.png" width="360" height="208" 
+						alt="Nerds">
+					</figure>
+					<b class="table-info">с 2004 года любим точность во всем:</b>
+					<table>
+						<tr>
+							<th>146<sup>%</sup></th>
+							<th>100<sup>%</sup></th>
+							<th>50<sup>%</sup></th>
+						</tr>
+						<tr>
+							<td>Уровень самоотдачи</td>
+							<td>Соблюдение сроков</td>
+							<td>Минимальная предоплата</td>
+						</tr>
+					</table>					
+			</section>
+		</div>		
 		<section class="brand-menu">
 			<ul class="brand">
 				<li class="brand-item">
@@ -216,23 +215,23 @@
 		<section class="modal modal-login">
 			<form class="modal-login" action="http://echo.htmlacademy.ru" method="post">
 				<b class="modal-feedback-title">Напишите нам</b>	
-			<div class="form-info">
-				<div class="feedback-column">
-					<label class="feedback-data" for="feedback-login">Ваше имя:</label>
-					<input class="login-user" type="text" name="login" id="feedback-login" placeholder="Представьтесь, пожалуйста" required>
+				<div class="form-info">
+					<div class="modal-feedback-column">
+						<label class="modal-feedback-data" for="modal-feedback-login">Ваше имя:</label>
+						<input class="login-user" type="text" name="login" id="modal-feedback-login" placeholder="Представьтесь, пожалуйста" required>
+					</div>
+					<div class="modal-feedback-column">
+						<label class="modal-feedback-data" for="modal-feedback-email">Ваш e-mail:</label>
+						<input type="email" name="email" id="modal-feedback-email" placeholder="Для отправки ответа" required>
+					</div>
+					<div class="modal-feedback-column">
+						<label class="modal-feedback-data" for="modal-feedback-textarea">Текст письма:</label>
+						<textarea name="text" id="modal-feedback-textarea" placeholder="В свободной форме" required rows="5"></textarea> 
+					</div>
 				</div>
-				<div class="feedback-column">
-					<label class="feedback-data" for="feedback-email">Ваш e-mail:</label>
-					<input type="email" name="email" id="feedback-email" placeholder="Для отправки ответа" required>
-				</div>
-				<div class="feedback-column">
-				<label class="feedback-data" for="feedback-textarea">Текст письма:</label>
-				<textarea name="text" id="feedback-textarea" placeholder="В свободной форме" required rows="5"></textarea> 
-				</div>
-			</div>
-				<button type="submit" class="button feedback-btn">Отправить</button>
+				<button type="submit" class="button modal-feedback-btn">Отправить</button>
 				<button type="submit" class="btn modal-close">Закрыть</button>
-			</form>	
+			</form>
 		</section>	
   </body>
 </html>
