--- a/catalog.html
+++ b/catalog.html
@@ -8,29 +8,29 @@
 		<link href="css/style.css" rel="stylesheet">
 	</head>
 	<body>
-		<header class="main-catalog-header">	
+		<header class="main-catalog-header">
 			<nav class="main-navigation container">
-				<a class="main-header-logo" href="index.html">				
+				<a class="main-header-logo" href="index.html">
 					<img src="img/logo.png" width="160" height="65" 
-					alt="Логотип Нердс магазин">	
+					alt="Логотип Нердс магазин">
 				</a>
 				<ul class="site-navigation">
 					<li class="site-item"><a href="index.html">Студия</a></li>
 					<li class="site-item"><a href="#">Клиенты</a></li>
 					<li class="site-item shop-item"><a href="#">Магазин</a></li>
 					<li class="site-item"><a href="#">Контакты</a></li>
-				</ul>			
+				</ul>
 				<ul class="cart-navigation">
 					<li class="site-item cart-link"><a href="#">Корзина</a></li>
-				</ul>		
+				</ul>
 			</nav>
 			<h1 class="main-header-title">Магазин готовых шаблонов</h1>
 			<div class="line-hop"></div>
 		</header>
 		<main class="container">
-			<h2 class="visually-hidden">Фильтр Сайтов</h2>	
+			<h2 class="visually-hidden">Фильтр Сайтов</h2>
 			<div class="catalog-columns">
-				<Section class="catalog-left-column">	
+				<Section class="catalog-left-column">
 					<form class="filter" method="get" action="https://echo.htmlacademy.ru">
 						<fieldset class="filter-item">
 							<legend class="filter-title">Стоимость:</legend>
@@ -49,7 +49,7 @@
 							</div>
 						</fieldset>
 						<fieldset>
-							<legend class="catalog-title">Сетка:</legend>			
+							<legend class="catalog-title">Сетка:</legend>
 							<ul class="catalog-grid-list">
 								<li class="filter-option">
 									<input class="visually-hidden filter-input 
@@ -68,9 +68,9 @@
 									filter-input-radio" type="radio" name="site-grid"
 									value="site-Rubber" id="filter-Rubber" disabled>
 									<label for="filter-Rubber">Резиновая</label>
-								</li>				
-							</ul>				
-						</fieldset>		
+								</li>
+							</ul>
+						</fieldset>
 						<fieldset>
 							<legend class="catalog-title">Особенности:</legend>
 							<ul class="catalog-features-list">
@@ -98,11 +98,11 @@
 									<input class="visually-hidden filter-input filter-input-checkbox" 
 									type="checkbox" name="cart" id="filter-cart">
 									<label for="filter-cart">Корзина</label>
-								</li>					
+								</li>
 							</ul>
-						</fieldset>	
-						<a class="button button-show" href="#">Показать</a>	
-					</form>								
+						</fieldset>
+						<a class="button button-show" href="#">Показать</a>
+					</form>
 				</section>
 				<section class="catalog-right-column">
 					<div class="column-container-menu">
@@ -116,126 +116,122 @@
 							<li><a href="#" class="arrow arrow-down"></a></li>
 							<li><a href="#" class="arrow arrow-up"></a></li>
 						</ul>
-					</div>	
+					</div>
 					<div class="catalog-column">
 						<ul class="image-item">
 							<li class="option-item">
-								<a class="catalog-image catalog-active" href="#">
-									<svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path fill="#4d4d4d" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>		
+								<div class="catalog-image">
+									<svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path fill="#4d4d4d" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
 									<figure class="catalog-image-item">
 										<img src="img/site-1.jpg" width="360" height="576" 
-										alt="Седона»"> 	
+										alt="Седона»">
 									</figure>
-									<section class="catalog-item-block block-active">
-										<h3 class="catalog-item-title">Sedona</h3>
-										<p class="catalog-item-info">Информационный сайт <br> для туристов</p>
+									<section class="catalog-item-block">
+										<h3 class="catalog-item-title"><a href="#">Sedona</a></h3>
+										<p class="catalog-item-info">Информационный сайт<br>для туристов</p>
 										<span class="button catalog-btn">9900 руб.</span>
 									</section>
-								</a>
+								</div>
 							</li>
-							<li class="option-item">				
-								<a class="catalog-image" href="#">	
+							<li class="option-item">
+								<div class="catalog-image">
 									<svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path fill="#4d4d4d" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
 									<figure class="catalog-image-item">
 										<img src="img/site-2.jpg" width="360" height="576" 
-										alt="Пинк»"> 
+										alt="Пинк»">
 									</figure>
 									<section class="catalog-item-block">
-										<h3 class="catalog-item-title">Pink app</h3>
-										<p class="catalog-item-info">Продуктовый лендинг <br> приложения для IOS и Android</p>
+										<h3 class="catalog-item-title"><a href="#">Pink app</a></h3>
+										<p class="catalog-item-info">Продуктовый лендинг<br>приложения для IOS и Android</p>
 										<span class="button catalog-btn">9900 руб.</span>
-									</section>	
-								</a>
+									</section>
+								</div>
 							</li>
 							<li class="option-item">
-								<a class="catalog-image" href="#">
+								<div class="catalog-image">
 									<svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path fill="#4d4d4d" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
 									<figure class="catalog-image-item">
 										<img src="img/site-3.jpg" width="360" height="576" 
 										alt="Барбершоп"> 
 									</figure>
 									<section class="catalog-item-block">
-										<h3 class="catalog-item-title">Barbershop</h3>
-										<p class="catalog-item-info">Сайт салоны красоты.<br> Для мужчин, да.</p>
+										<h3 class="catalog-item-title-3"><a href="#">Barbershop</a></h3>
+										<p class="catalog-item-info">Сайт салоны красоты.<br>Для мужчин, да.</p>
 										<span class="button catalog-btn">9900 руб.</span>
-									</section>	
-								</a>
+									</section>
+								</div>
 							</li>
 							<li class="option-item">
-								<a class="catalog-image" href="#">
+								<div class="catalog-image">
 									<svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path fill="#4d4d4d" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
 									<figure class="catalog-image-item">
 										<img src="img/site-4.jpg" width="360" height="576" 
-										alt="Мишка"> 
+										alt="Мишка">
 									</figure>
 									<section class="catalog-item-block">
-										<h3 class="catalog-item-title">Mishka</h3>
-										<p class="catalog-item-info">Интернет-магазин <br> вязаных игрушек</p>
+										<h3 class="catalog-item-title"><a href="#">Mishka</a></h3>
+										<p class="catalog-item-info">Интернет-магазин<br>вязаных игрушек</p>
 										<span class="button catalog-btn">9900 руб.</span>
-									</section>	
-								</a>
+									</section>
+								</div>
 							</li>
-							<li class="option-item">						
-								<a class="catalog-image" href="#">
+							<li class="option-item">
+								<div class="catalog-image">
 									<svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path fill="#4d4d4d" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
 									<figure class="catalog-image-item">
 										<img src="img/site-5.jpg" width="360" height="576" 
-										alt="А+"> 
+										alt="А+">
 									</figure>
 									<section class="catalog-item-block">
-										<h3 class="catalog-item-title">A plus</h3>
-										<p class="catalog-item-info">Лендинг курсов повышения <br> квалификации</p>
+										<h3 class="catalog-item-title"><a href="#">A plus</a></h3>
+										<p class="catalog-item-info">Лендинг курсов повышения<br>квалификации</p>
 										<span class="button catalog-btn">9900 руб.</span>
-									</section>	
-								</a>
+									</section>
+								</div>
 							</li>
-							<li class="option-item">						
-								<a class="catalog-image" href="#">
+							<li class="option-item">
+								<div class="catalog-image">
 									<svg xmlns="http://www.w3.org/2000/svg" width="360" height="40" viewBox="0 0 360 40"><path fill="#4d4d4d" d="M356 0H4C1.8 0 0 1.8 0 4v36h360V4c0-2.2-1.8-4-4-4zM22.991 27a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm23.011 0a7 7 0 1 1 0-14 7 7 0 0 1 0 14z"/></svg>
 									<figure class="catalog-image-item">
 										<img src="img/site-6.jpg" width="360" height="576" 
-										alt="Крафтовый квас всему голова!"> 
-									</figure>								
-									<section class="catalog-item-block">								
-										<h3 class="catalog-item-title">Кваст</h3>
-										<p class="catalog-item-info">Промо-сайт производителя <br> крафтового кваса</p>
-										<span class="button catalog-btn">9900 руб.</span>									
-									</section>								
-								</a>
-							</li>						
-						</ul>					
+										alt="Крафтовый квас всему голова!">
+									</figure>
+									<section class="catalog-item-block">
+										<h3 class="catalog-item-title"><a href="#">Кваст</a></h3>
+										<p class="catalog-item-info">Промо-сайт производителя<br>крафтового кваса</p>
+										<span class="button catalog-btn">9900 руб.</span>
+									</section>
+								</div>
+							</li>
+						</ul>
 						<ul class="pagination-list">
 							<li class="pagination-item-current"><a href="#">1</a></li>
 							<li class="pagination-item "><a>2</a></li>
 							<li class="pagination-item"><a href="#">3</a></li>
 							<li class="pagination-item"><a href="#">Следующая</a></li>
-						</ul>	
-					</div>					
+						</ul>
+					</div>
 				</section>
-			</div>	
+			</div>
 		</main>
 		<div class="map">
 			<figure class="map-image">
 				<img class="map-image-item" src="img/map-marker.jpg" height="416" width="1440" alt="Карта">
-			</figure>		
+			</figure>
 			<div class="container">
 				<div class="container-contacts">
 					<div class="container-info-contacts">
 						<h3 class="title-contacts">Nёrds Design Studio</h3>
-						<p class="footer-contacts">
-							191186, Санкт-Петербург.<br>
-							ул.Б.Конюшенная,д. 19/8<br>
-							<br>
-							тел.+7(812)275-75-75<br>
-							<br>
-						</p>
+							<p class="footer-contacts">191186, Санкт-Петербург.</p>
+							<p class="footer-contacts adress-item">ул. Б. Конюшенная, д. 19/8</p>
+							<p class="footer-contacts number-item">тел. +7 (812) 275-75-75</p>
 						<a class="button btn-contacts" href="#">Напишите нам</a>
 					</div>
-				</div>	
-			</div>		
+				</div>
+			</div>
 		</div>
 		<footer class="main-footer">
-			<div class="container">				
+			<div class="container">
 				<ul class="footer-social">
 					<li class="social-list"><a class="social-button" href="#">
 						<span class="visually-hidden">Вконтакте</span>
@@ -252,17 +248,17 @@
 						<svg xmlns="http://www.w3.org/2000/svg" width="21" height="21" viewBox="0 0 21 21"><path fill="#fff" d="M18 0H3C1.35 0 0 1.35 0 3v15c0 1.65 1.35 3 3 3h15c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3zm-7.5 7c1.93 0 3.5 1.57 3.5 3.5S12.43 14 10.5 14 7 12.43 7 10.5 8.57 7 10.5 7zM18 18H3V9h1.181A6.504 6.504 0 0 0 4 10.5a6.5 6.5 0 1 0 13 0 6.45 6.45 0 0 0-.181-1.5H18v9zm0-11h-4V3h4v4z"/></svg>
 						</a>
 					</li>
-				</ul>			
+				</ul>
 				<section class="footer-info">
 					<h3 class="visually-hidden">Скидка</h3>
 					<b class="footer-title">Давайте дружить, это выгодно!</b>
 					<p class="footer-info-item">Скидка 10% для друзей из социальных сетей</p>
-				</section>	
+				</section>
 			</div>
 		</footer>
-		<section class="modal modal-login">
+		<section class="visually-hidden modal modal-login">
 			<form class="modal-login" action="http://echo.htmlacademy.ru" method="post">
-				<b class="modal-feedback-title">Напишите нам</b>	
+				<b class="modal-feedback-title">Напишите нам</b>
 				<div class="form-info">
 					<div class="modal-feedback-column">
 						<label class="modal-feedback-data" for="modal-feedback-login">Ваше имя:</label>
@@ -274,12 +270,12 @@
 					</div>
 					<div class="modal-feedback-column">
 						<label class="modal-feedback-data" for="modal-feedback-textarea">Текст письма:</label>
-						<textarea name="text" id="modal-feedback-textarea" placeholder="В свободной форме" required rows="5"></textarea> 
+						<textarea name="text" id="modal-feedback-textarea" placeholder="В свободной форме" required rows="5"></textarea>
 					</div>
 				</div>
 				<button type="submit" class="button modal-feedback-btn">Отправить</button>
 				<button type="submit" class="btn modal-close">Закрыть</button>
 			</form>
-		</section>	
-  </body>
+		</section>
+	</body>
 </html>
