--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<h1 class="visually-hidden">Магазин сайтов Нёрдс</h1>
 			<div class="container">
 				<nav class="main-navigation">
-					<a class="main-header-logo" href="index.html">
+					<a class="main-header-logo" href="#">
 						<img src="img/logo.png" width="160" height="65" 
 						alt="Логотип Нердс магазин">
 					</a>
@@ -23,7 +23,7 @@
 						<li class="site-item site-item-active"><a href="#">Контакты</a></li>
 					</ul>
 					<ul class="cart-navigation">
-						<li class="cart-link"><a href="#">Корзина</a></li>
+						<li class="site-item "><a class="cart-link" href="#">Корзина</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -136,7 +136,7 @@
 			<section class="brand-menu">
 				<ul class="brand">
 					<li class="brand-item">
-						<a class="brand-item-image" href="#">
+						<a class="brand-item-image" href="https://htmlacademy.ru/intensive/htmlcss">
 							<img src="img/brand-html-academy.png" width="260" height="180" 
 							alt="html academy">
 						</a>
@@ -164,8 +164,9 @@
 			</section>
 		</main>
 		<div class="map">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" width="1440" height="440" allowfullscreen></iframe>
 			<figure class="map-image">
-				<img class="map-image-item" src="img/map-marker.jpg"  alt="Карта">
+				<img class="map-image-item" src="img/map.jpg"  alt="Карта">
 			</figure>
 			<div class="container">
 				<div class="container-contacts">
@@ -205,7 +206,7 @@
 				</section>
 			</div>
 		</footer>
-		<section class="visually-hidden modal modal-login">
+		<section class="modal modal-login">
 			<form class="modal-login" action="http://echo.htmlacademy.ru" method="post">
 				<b class="modal-feedback-title">Напишите нам</b>
 				<div class="form-info">
@@ -226,5 +227,6 @@
 				<button type="submit" class="btn modal-close">Закрыть</button>
 			</form>
 		</section>
+		<script src="js/popup.js"></script>
 	</body>
 </html>
